--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quirkylock",
+  "name": "passyeti",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^0.7.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.32.5"
+    "@formkit/auto-animate": "^0.9.0",
+    "eslint": "9.39.1",
+    "eslint-config-next": "16.0.1",
+    "next": "^16.0.1",
+    "react": "19.2.0",
+    "react-confetti": "^6.4.0",
+    "react-dom": "19.2.0",
+    "sharp": "^0.34.4"
   }
 }
